LabelAndDateInput field alignment fix

--- a/modules/forms/templates/raw/ts/public/index.css
+++ b/modules/forms/templates/raw/ts/public/index.css
@@ -834,7 +834,7 @@ pre {
   display: inline-block;
   padding: 0;
   border: 0;
-  width: 100%;
+  width: 65%;
 }
 
 .react-datepicker {
@@ -1337,7 +1337,7 @@ pre {
 .react-datepicker__input-container {
   position: relative;
   display: inline-block;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .react-datepicker__year-read-view,
